# SecureCommunication

./: README.md
.github/workflows/: android.yml
Android/SecureCommunication/: .gitmodules  settings.gradle.kts
Android/SecureCommunication/app/: build.gradle.kts
Android/SecureCommunication/app/src/androidTest/java/com/rafaeldiascampos/securecommunication/: ExampleInstrumentedTest.kt
Android/SecureCommunication/app/src/main/: AndroidManifest.xml
Android/SecureCommunication/app/src/main/assets/: client-private.pem  server-public.pem
Android/SecureCommunication/app/src/main/cpp/: CMakeLists.txt  encrypted-communication.cpp
Android/SecureCommunication/app/src/main/java/com/rafaeldiascampos/securecommunication/: EncryptedAsymmetricRequestInterceptor.kt  EncryptedNativeRequestInterceptor.kt  EncryptedRequestInterceptor.kt  MainActivity.kt  RequestHandler.kt
Android/SecureCommunication/app/src/main/res/layout/: activity_main.xml
Android/SecureCommunication/app/src/main/res/values/: strings.xml  themes.xml
Android/SecureCommunication/app/src/main/res/values-night/: themes.xml
Android/SecureCommunication/app/src/test/java/com/rafaeldiascampos/securecommunication/: ExampleUnitTest.kt
Android/SecureCommunication/gradle/: libs.versions.toml
Android/SecureCommunication/gradle/wrapper/: gradle-wrapper.properties
Backend/: client-public.pem  package-lock.json  package.json  server-private.pem  server.js
